# robo-ops

./: .gitignore  .gitmodules  AGENTS.md  CLAUDE.md  README.md  arc_README.md  config.toml.example  ports.toml  pyproject.toml
archive/: leader-teleop.py  phone-teleop.py
calibration/follower/: bimanual_follower_left.json  bimanual_follower_right.json
calibration/leader/: bimanual_leader_left.json  bimanual_leader_right.json
data_taking/: README.md  config.toml  record.py  replay.py  teleop.py
demo/: record.py  replay.py
demo/recordings/: best.json  demo.json  demofold.json  drunk.json  drunk2.json  grid.json  linique_unfold_1.json  linique_unfold_2.json  linique_unfold_3.json  loop.json  v3.json  waterfall_dawson.json
frontend/: index.html  package-lock.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: CameraGrid.tsx  ConnectionPanel.tsx  ControlBar.tsx  Header.tsx  InferencePanel.tsx  ReplayPanel.tsx  StatusBar.tsx  TeleopPanel.tsx
frontend/src/components/ui/: badge.tsx  button.tsx  card.tsx  select.tsx
frontend/src/lib/: api.ts  types.ts  useRobotState.ts
inference/: README.md  config.toml  run.py  smolvla-napkin-fold.toml  xvla.toml
lib/: __init__.py  config.py  policy.py  robots.py  stow.py  urdf_viz.py
prod/: API.md  camera_stream.py  config.toml  inference_backend.py  operations.py  robot_manager.py  server.py  teleop_client.py
prod/static/: app.js  index.html
remote_teleop/: README.md
setup/: README.md  calibrate.py  motor_setup.py
training/: README.md  arc_train.sh  config.toml  shit_i_ran.md  train.py
training/act/: README.md  arc_train.sh  config.toml  train.py
training/pi0/: README.md  arc_train.sh  download_weights.py
training/sarm/: README.md  arc_train.sh  config.toml  download_clip.py  train.py  train_cli.sh
utils/: calibrate.py  calibrate_follower.py  calibrate_leader.py  dual-leader-teleop.py  export_rrd_videos.py  find_cameras.py  find_motors.py  fix_dataset.py  health.py  motor-setup.py  motor_setup_follower.py  motor_setup_leader.py  set_exposure.py  stow.py  teleop.py  test_cameras.py  test_realsense.py  test_urdf_viz.py
