[project]
name = "Linique-Robot-Operations"
version = "0.1.0"
description = "Training Data Collection and Robot Operations Libraries"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "lerobot[feetech]==0.4.2",
    "wandb>=0.21.4",
    "typer>=0.15.0",
]

[project.scripts]
train = ""

[dependency-groups]
dev = [
    "ruff>=0.9.0",
    "ty>=0.0.1a6",
]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
    "TCH",    # flake8-type-checking
    "PTH",    # flake8-use-pathlib
    "ERA",    # eradicate (commented out code)
    "PL",     # pylint
    "PERF",   # perflint
    "RUF",    # ruff-specific rules
]
ignore = [
    "PLR0913", # too many arguments
    "PLR2004", # magic value comparison
]

[tool.ruff.lint.isort]
force-single-line = true

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false

[tool.ty.environment]
python-version = "3.13"
