[project]
name = "Linique-Robot-Operations"
version = "0.1.0"
description = "Training Data Collection and Robot Operations Libraries"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "lerobot[feetech,phone]",
    "wandb>=0.21.4",
    "typer>=0.15.0",
    "opencv-python>=4.10.0",
    "numpy>=2.0.0",
    "trimesh>=4.0.0",
    "pyrealsense2>=2.55.1 ; sys_platform == 'linux'",
]

[tool.uv.sources]
lerobot = { path = "lerobot", editable = true }

# Scripts are run directly with `uv run <path>` rather than installed commands
# e.g., `uv run training/train.py` or `uv run inference/run.py`

[dependency-groups]
dev = [
    "ruff>=0.9.0",
    "ty>=0.0.1a6",
]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
    "TCH",    # flake8-type-checking
    "PTH",    # flake8-use-pathlib
    "ERA",    # eradicate (commented out code)
    "PL",     # pylint
    "PERF",   # perflint
    "RUF",    # ruff-specific rules
]
ignore = [
    "PLR0913", # too many arguments
    "PLR0915", # too many statements
    "PLR2004", # magic value comparison
]

[tool.ruff.lint.isort]
force-single-line = true

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false

[tool.ty.environment]
python-version = "3.13"
